CKAD/5_Services and Networking/Demonstrate basic understanding of NetworkPolicies/network_policy.yaml
# By default all allow traffic is configured
# a network policy is other object linked to a pod
# a policy allows traffic on specific port and block the rest
# labels are used to match pods with network policies


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector:        # without this all spaces can communicate
        matchLabels:
          name: prod
    - ipBlock:
        cidr: 192.168.5.10/32   # allows only this specific ip 
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.5.10/32   # allow the out traffic to this specific ip
    ports:
    - protocol: TCP
      port: 80
